(lang dune 3.9)

(name zgen)

(generate_opam_files true)

(source
 (github username/reponame))

(authors "Max Kopinsky")

(maintainers "Max Kopinsky")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name zgen)
 (synopsis "Constraint generator for z3ml")
 (description "An implementation of the constraint generation algorithm following Finding Minimum Type Error Sources, Wies et al.")
 (depends
  (ocaml (= 4.13.1))
  dune
  (ocaml-base-compiler (= 4.13.1))
  utop)
 (tags
  (compilers typechecking)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
